fix visible scrollbar in firefox

--- a/public/styles/styles-main.css
+++ b/public/styles/styles-main.css
@@ -120,6 +120,7 @@ html {
     display: flex;
     align-items: center;
     justify-content: center;
+    scrollbar-width: none;
 }
 
 .full {
